# dilemma

./: .gitattributes  .gitignore  CLAUDE.md  README.md  bench_crowell.py  bench_dbbe.py  bench_fast.py  bench_herodotus.py  bench_quick.py  bench_rare.py  build_data.py  build_glaux_pairs.py  build_glaux_pos_lookup.py  build_lookup_db.py  build_treebank_pos_lookup.py  crasis.py  dilemma.py  eval_dbbe.py  eval_digrec.py  eval_holdout.py  eval_hunspell.py  eval_lm.py  eval_papygreek.py  eval_papygreek_periods.py  expand_lsj.py  expand_sophocles.py  export_hunspell.py  export_lm.py  export_morphology.py  export_onnx.py  extract_byzantine.py  extract_diorisis_lm.py  extract_gorman.py  extract_hnc.py  extract_indeclinables.py  extract_perseus.py  extract_polytonic_mg.py  extract_proiel.py  fix_selfmaps.py  model.py  (+13 more)
data/: ag_lookup.json  ag_pairs.json  ag_pos_lookup.json  brilldag_headwords.json  byz_vern_freq.json  canonical_ag_forms.json  convention_cunliffe.json  convention_lsj.json  convention_triantafyllidis.json  corpus_freq.json  cunliffe_headwords.json  dge_headwords.json  dialg_status.md  diorisis_freq.json  diorisis_pairs.json  etymology_bridges.json  glaux_freq.json  glaux_pos_lookup.json  hnc_pairs.json  indeclinable_pairs.json  lemma_equivalences.json  lgpn_names.json  lookup.db  lsj_headwords.json  med_form_freq.json  med_lookup.json  med_pairs.json  med_pos_lookup.json  med_ranked_forms.json  mg_lookup.json  mg_pairs.json  mg_pos_lookup.json  pd_headwords.json  perseus_pairs.json  proiel_pairs.json  related_lemmas.json  spell_index.db  suda_assessment.md  treebank_pos_lookup.json
dilemma/: __init__.py  __main__.py  _download.py  core.py  form_sanitize.py  model.py  morph_diff.py  normalize.py  onnx_inference.py  paradigm.py
eval/: bench_dbbe.py  eval_dbbe.py  eval_digrec.py  eval_hnc.py  eval_holdout.py  eval_papygreek.py  (+1 more)
(+75 files in other folders)
